connect heroku with travis3

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ script: mvn clean verify
 deploy:
   provider: heroku
   api_key:
-    secure: "43882dbc-c956-43e6-94de-e7a963ff37e3"
-    app: "first-app-cl5616"
+    secure: 43882dbc-c956-43e6-94de-e7a963ff37e3
+    app: first-app-cl5616
 
